==> lvgl/lv_port_aurix/Fat_fs/mmc.c <==
#include <Cpu/Std/Ifx_Types.h>
#include "Configuration.h"
#include "diskio.h"
#define	_USE_CD		1	/* Use card detect switch */
#define _USE_WP		0	/* Use write protect switch */
#define CMD0	(0)			/* GO_IDLE_STATE */
#define CMD1	(1)			/* SEND_OP_COND (MMC) */
#define	ACMD41	(0x80+41)	/* SEND_OP_COND (SDC) */
#define CMD8	(8)			/* SEND_IF_COND */
#define CMD9	(9)			/* SEND_CSD */
#define CMD10	(10)		/* SEND_CID */
#define CMD12	(12)		/* STOP_TRANSMISSION */
#define ACMD13	(0x80+13)	/* SD_STATUS (SDC) */
#define CMD16	(16)		/* SET_BLOCKLEN */
#define CMD17	(17)		/* READ_SINGLE_BLOCK */
#define CMD18	(18)		/* READ_MULTIPLE_BLOCK */
#define CMD23	(23)		/* SET_BLOCK_COUNT (MMC) */
#define	ACMD23	(0x80+23)	/* SET_WR_BLK_ERASE_COUNT (SDC) */
#define CMD24	(24)		/* WRITE_BLOCK */
#define CMD25	(25)		/* WRITE_MULTIPLE_BLOCK */
#define CMD32	(32)		/* ERASE_ER_BLK_START */
#define CMD33	(33)		/* ERASE_ER_BLK_END */
#define CMD38	(38)		/* ERASE */
#define CMD55	(55)		/* APP_CMD */
#define CMD58	(58)		/* READ_OCR */
#define CS_LOW()	{ IfxPort_setPinLow(SDCARD_USE_CHIPSELECT.pin.port, SDCARD_USE_CHIPSELECT.pin.pinIndex);	}   /* MMC CS = L */
#define	CS_HIGH()	{ IfxPort_setPinHigh(SDCARD_USE_CHIPSELECT.pin.port, SDCARD_USE_CHIPSELECT.pin.pinIndex);   }	/* MMC CS = H */
#define SOCKPORT SDCARD_USE_CD.port->IN.U
#define SOCKWP 0 //not used
#define SOCKINS 0x1<<SDCARD_USE_CD.pinIndex

BYTE rcvr_spi (void)
{
    uint8 rx_data;
    /* we can use stack variables for exchange because we are waiting until the transfer is finished */

    /* wait until Spi is no longer busy (should not busy here) */
    while (IfxQspi_SpiMaster_getStatus(&g_Qspi_Mmc.drivers.spiMasterChannel) == SpiIf_Status_busy) {};

    /* we don't have explizit send values, our driver will send 0xFF in this case (what we need) */
    IfxQspi_SpiMaster_exchange(&g_Qspi_Mmc.drivers.spiMasterChannel, 0, &rx_data, 1);

    /* wait until our datas are valid */
    while (IfxQspi_SpiMaster_getStatus(&g_Qspi_Mmc.drivers.spiMasterChannel) == SpiIf_Status_busy) {};

    return(rx_data);
}

void power_on (void)	/* Enable SPI */
{
    IfxQspi_SpiMaster *spiMaster;
	/* Attach SPIx module to I/O pads */
    /* disable interrupts */
    boolean interruptState = IfxCpu_disableInterrupts();

    spiMaster = SDCARD_QSPI_INIT();

    if (g_Qspi_Mmc.drivers.spiMaster != spiMaster)
    {
        /* this is the first call, we initialize the channel */
    	g_Qspi_Mmc.drivers.spiMaster = spiMaster;
    	IfxQspi_SpiMaster_ChannelConfig spiMasterChannelConfig;
        {
            /* create channel config */
#if defined(__DCC__)
    		// bug on DCC not all bits in mode are cleared
    		memset(&spiMasterChannelConfig, 0, sizeof(spiMasterChannelConfig));
#endif
            IfxQspi_SpiMaster_initChannelConfig(&spiMasterChannelConfig,
                g_Qspi_Mmc.drivers.spiMaster);

            /* set the baudrate for this channel */
            spiMasterChannelConfig.base.baudrate = 50000000;

            /* set the transfer data width */
            spiMasterChannelConfig.base.mode.dataWidth = 8;
            spiMasterChannelConfig.base.mode.csLeadDelay = SpiIf_SlsoTiming_0;
            spiMasterChannelConfig.base.mode.csTrailDelay = SpiIf_SlsoTiming_0;
            spiMasterChannelConfig.base.mode.csInactiveDelay = SpiIf_SlsoTiming_0;
            spiMasterChannelConfig.base.mode.shiftClock = SpiIf_ShiftClock_shiftTransmitDataOnTrailingEdge;

            const IfxQspi_SpiMaster_Output slsOutput = {&SDCARD_USE_CHIPSELECT,
                                                        IfxPort_OutputMode_pushPull,
                                                        IfxPort_PadDriver_cmosAutomotiveSpeed1};

            spiMasterChannelConfig.sls.output.pin    = slsOutput.pin;
            spiMasterChannelConfig.sls.output.mode   = slsOutput.mode;
            spiMasterChannelConfig.sls.output.driver = slsOutput.driver;

            /* initialize channel */
            IfxQspi_SpiMaster_initChannel(&g_Qspi_Mmc.drivers.spiMasterChannel,
                &spiMasterChannelConfig);
            /** - Override the SLSO manually as general-purpose output */
            IfxPort_setPinHigh(slsOutput.pin->pin.port, slsOutput.pin->pin.pinIndex);
            IfxQspi_initSlso(slsOutput.pin, slsOutput.mode, slsOutput.driver, IfxPort_OutputIdx_general);

        }
    }

    /* enable interrupts again */
    IfxCpu_restoreInterrupts(interruptState);

    if (_USE_CD) { }	/* MMC_CD */
	if (_USE_WP) { }	/* MMC_WP */

}
