==> VCVRack/Rack/plugins/community/repos/Southpole-parasites/parasites/avrlib/third_party/ff/mmc.c <==
#include <avr/io.h>
#include "diskio.h"
#include "mmc.h"
#define CS_LOW()  MMC_CS_PORT &= ~(1 << MMC_CS_BIT)     /* MMC CS = L */
#define CS_HIGH() MMC_CS_PORT |= (1 << MMC_CS_BIT)      /* MMC CS = H */
#define SOCKWP    0   /* Write protected. yes:true, no:false, default:false */
#define SOCKINS   1  /* Card detected.   yes:true, no:false, default:true */
#define FCLK_SLOW() SPCR = 0x52   /* Set slow clock (100k-400k) */
#define FCLK_FAST() SPCR = 0x50   /* Set fast clock (depends on the CSD) */
#define CMD0  (0)     /* GO_IDLE_STATE */
#define CMD1  (1)     /* SEND_OP_COND (MMC) */
#define ACMD41  (0x80+41) /* SEND_OP_COND (SDC) */
#define CMD8  (8)     /* SEND_IF_COND */
#define CMD9  (9)     /* SEND_CSD */
#define CMD10 (10)    /* SEND_CID */
#define CMD12 (12)    /* STOP_TRANSMISSION */
#define ACMD13  (0x80+13) /* SD_STATUS (SDC) */
#define CMD16 (16)    /* SET_BLOCKLEN */
#define CMD17 (17)    /* READ_SINGLE_BLOCK */
#define CMD18 (18)    /* READ_MULTIPLE_BLOCK */
#define CMD23 (23)    /* SET_BLOCK_COUNT (MMC) */
#define ACMD23  (0x80+23) /* SET_WR_BLK_ERASE_COUNT (SDC) */
#define CMD24 (24)    /* WRITE_BLOCK */
#define CMD25 (25)    /* WRITE_MULTIPLE_BLOCK */
#define CMD55 (55)    /* APP_CMD */
#define CMD58 (58)    /* READ_OCR */
#define xmit_spi(dat)   SPDR=(dat); loop_until_bit_is_set(SPSR,SPIF)

static
BYTE rcvr_spi (void)
{
  SPDR = 0xFF;
  loop_until_bit_is_set(SPSR, SPIF);
  return SPDR;
}

static
void power_on (void)
{
  for (Timer1 = 2; Timer1; ); /* Wait for 20ms */
#ifndef MMC_NO_SPI_INITIALIZATION
  PORTB = 0b10110101;     /* Enable drivers */
  DDRB  = 0b11000111;
  SPCR = 0x52;      /* Enable SPI function in mode 0 */
  SPSR = 0x01;      /* SPI 2x mode */
#endif  // MMC_NO_SPI_INITIALIZATION
}
